test/files/neg/t5956.check
t5956.scala:1: warning: case classes without a parameter list have been deprecated;
use either case objects or case classes with `()' as parameter list.
object O { case class C[T]; class C }
                          ^
t5956.scala:2: warning: case classes without a parameter list have been deprecated;
use either case objects or case classes with `()' as parameter list.
object T { case class C[T]; case class C }
                          ^
t5956.scala:2: warning: case classes without a parameter list have been deprecated;
use either case objects or case classes with `()' as parameter list.
object T { case class C[T]; case class C }
                                        ^
t5956.scala:1: error: C is already defined as case class C
object O { case class C[T]; class C }
                                  ^
t5956.scala:2: error: C is already defined as case class C
object T { case class C[T]; case class C }
                                       ^
three warnings found
two errors found
